added SASS styling - fixed loan amount starting point bug

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^4.1.2",
     "morgan": "~1.5.1",
     "n3-charts": "^2.0.28",
+    "node-sass": "^4.5.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
